[package]
name = "deltavfs-driver"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem"
]

