[package]
name = "deltavfs-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
macros = { version = "0.0.0", path = "../macros" }
shared = { version = "0.0.0", path = "../shared" }

hex = "0.4"
anyhow = "1.0"
iced-x86 = "1.15.0"
once_cell = "1.9"
widestring = "0.5.0"

[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem"
]
