[package]
name = "deltavfs-inject"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug"
]
