[package]
name = "deltavfs-injector"
version = "0.0.0"
edition = "2021"

[dependencies]
shared = { version = "0.0.0", path = "../shared" }

hex = "0.4"
log = "0.4"
anyhow = "1.0"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug"
]
