[package]
name = "shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rkyv = "0.7.33"
bytecheck = "0.6.7"
once_cell = "1.10.0"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader"
]