[package]
name = "shared"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow      = "1.0"
rkyv        = "0.7.33"
bytecheck   = "0.6.7"
once_cell   = "1.10.0"
widestring  = "0.5.1"

[dependencies.iced-x86]
version = "1.17.0"
features = ["code_asm"]

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]